--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ streamlit==1.38.0
 langchain==0.3.0
 langchain-community==0.3.0
 sentence-transformers==3.1.1
-faiss-cpu==1.8.0
 alpha-vantage==2.3.1
 yfinance==0.2.43
 requests==2.32.3
@@ -19,4 +18,4 @@ python-dotenv==1.0.1
 chromedriver-autoinstaller==0.6.4
 langchain_huggingface==0.2.0
 faiss-cpu==1.11.0
-huggingface_hub[hf_xet]==1.1.2
+huggingface_hub==0.30.2
